<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Front page -->
    <string name="app_name">AirSwimmer</string>
    <string name="action_settings">Settings</string>
    <color  name="app_colour">#33FFFF</color>
    <string name="button_buttonb">TASTEN</string>
    <string name="button_wischen">WISCHEN</string>
    <string name="button_kippen">KIPPEN</string>
    
    <!-- buttons of button_mode -->
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_right">Right</string>
    <string name="button_left">Left</string>
    
	<!-- submenu of select_mode -->	
 	<string name="mode_buttons">Tasten</string> 
 	<string name="mode_tilt">Kippen</string> 
 	<string name="mode_slide">Wischen</string> 

 	<!-- control.xml menu -->
 	<string name="select_mode">Modus auswählen</string>
 	<string name="change_background">Hintergrund ändern</string>
 	<string name="change_move">Steuerungsart ändern</string>
 	
 	<!-- submenu of change-background -->
 	<string name="water_picture">Wasser</string> 
 	<string name="sky_picture">Himmel</string>
 	<string name="th_picture">Hochschule</string>
 	
 	<!-- submenu of change-mode -->
    <string name="title_activity_activity__buttons">Activity_Buttons</string>
    <string name="title_activity_activity__tilt">Activity_Tilt</string>
    <string name="title_activity_activity__slide">Activity_Slide</string>
    
    <!-- submenu of change-move -->
    <string name="title_activity_activity__buttons_permanent">Activity_Buttons_Permanent</string>
    <string name="title_activity_activity__slide_permanent">Activity_Slide_Permanent</string>
	<string name="title_activity_activity__tilt_permanent">Activity_Tilt_Permanent</string>
	<string name="single">Einfach</string>
	<string name="permanent">Permanent</string>
	
	<!-- start.xml menu -->
	<string name="change_layout_orientation">Ausrichtung ändern</string>
	<string name="orientation_portrait">Aux-Anschluss an der kurzen Seite</string>
	<string name="orientation_landscape">Aux-Anschluss an der langen Seite</string>
	<string name="open_info_page">Info</string>
	<string name="open_sound_calc">Lautstärkeregelung</string>	
	
  
</resources>