<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#0000CC"
    tools:context=".StartActivity" >

    <!-- Button gets created
    android:id is the name of the button, with that name it can be called
    anrdoid:layout_marginLeft is the position where the button should be (in pixel)-->
    <Button
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_left"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:src="@drawable/up"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_left"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/down"
        android:text="@string/button_down" />

        <!-- android:layout_toLeftOf="@+id/button_down" shows that the button is positioned at the left hand side of the button 
        "button_down" and is 10 pixel away from the right side -->
    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/button_down"
        android:src="@drawable/left"
        android:text="@string/button_left" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/button_down"
        android:src="@drawable/right"
        android:text="@string/button_right" />

</RelativeLayout>